--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,14 @@
     <dependency>
       <groupId>uk.org.lidalia</groupId>
       <artifactId>lidalia-test</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>uk.org.lidalia</groupId>
       <artifactId>slf4j-test</artifactId>
+      <version>1.0.0-SNAPSHOT</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
