--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <artifactId>jvm-library</artifactId>
     <groupId>uk.org.lidalia</groupId>
     <version>1.0.0-SNAPSHOT</version>
-    <relativePath>../jvm-library</relativePath>
+    <relativePath>../lidalia-parent/jvm-library</relativePath>
   </parent>
   <artifactId>lidalia-jvm-library</artifactId>
   <packaging>pom</packaging>
