--- a/pom.xml
+++ b/pom.xml
@@ -1,24 +1,33 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>jvm-library</artifactId>
     <groupId>uk.org.lidalia</groupId>
+    <artifactId>parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
   </parent>
-  <artifactId>lidalia-jvm-library</artifactId>
+
+  <artifactId>lidalia-test-dependencies</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+
   <packaging>pom</packaging>
   <dependencies>
+    <dependency>
+      <groupId>${project.parent.groupId}</groupId>
+      <artifactId>standard-test-dependencies</artifactId>
+      <version>${project.parent.version}</version>
+      <type>pom</type>
+    </dependency>
     <dependency>
       <groupId>uk.org.lidalia</groupId>
       <artifactId>lidalia-test</artifactId>
       <version>1.0.0-SNAPSHOT</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>uk.org.lidalia</groupId>
       <artifactId>slf4j-test</artifactId>
       <version>1.0.0-SNAPSHOT</version>
-      <scope>test</scope>
+      <scope>compile</scope>
     </dependency>
   </dependencies>
 </project>
