Ensuring standard-test-dependencies are a compile time (and hence transitively compile) dependency

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
       <artifactId>standard-test-dependencies</artifactId>
       <version>${project.parent.version}</version>
       <type>pom</type>
+      <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>uk.org.lidalia</groupId>
