--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,24 @@
   <artifactId>lidalia-test-dependencies</artifactId>
   <version>1.0.0-SNAPSHOT</version>
 
+  <name>Lidalia Test Dependencies</name>
+  <description>Standard test dependencies including those on Lidalia test jars.</description>
+  <url>http://projects.lidalia.org.uk/lidalia-test-dependencies</url>
+  <licenses>
+    <license>
+      <name>MIT X11 License</name>
+      <url>https://github.com/Mahoney/lidalia-parent/raw/master/X11-LICENSE.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+
+  <scm>
+    <url>https://github.com/Mahoney/lidalia-test-dependencies</url>
+    <connection>scm:git:git@github.com:Mahoney/lidalia-test-dependencies.git</connection>
+    <developerConnection>scm:git:git@github.com:Mahoney/lidalia-test-dependencies.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <packaging>pom</packaging>
   <dependencies>
     <dependency>
