--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>uk.org.lidalia</groupId>
     <artifactId>parent</artifactId>
-    <version>1.2.0-SNAPSHOT</version>
+    <version>1.0.1</version>
   </parent>
 
   <artifactId>lidalia-test-dependencies</artifactId>
